Fix equation overflow on mobile

--- a/site/css/article.css
+++ b/site/css/article.css
@@ -8,6 +8,10 @@ body {
   .writing {
     padding: 1.2em !important;
   }
+
+  .katex-display {
+    font-size: 55%;
+  }
 }
 
 @media only screen and (min-width: 440px) {
@@ -34,6 +38,7 @@ h2 {
 
 p {
   margin-top: 0.5em;
+  line-height: 1.3;
 }
 
 hr {
@@ -72,8 +77,8 @@ hr {
 
 #visualization-container {
   position: relative;
-  height: min(800px, 100vh);
-  width: min(100vw, 1200px);
+  height: min(800px, 90vh);
+  width: min(calc(100vw - 1em), 1200px);
   align-self: center;
 
   border: 1px solid #ddd;
